[package]
name = "selene"
version = "0.1.0"
authors = ["dtn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# misc 
clap = "3.0.0-beta.2"
once_cell = "1.5.2"
anyhow = "1.0.38"
regex = "1.4.3"
tempfile = "3.2.0"
futures = "0.3.12"

# network
tokio = { version = "0.2.25", features = ["macros", "time", "fs"] }
reqwest = { version = "0.10.10", features = ["cookies"] }

# decryption modules
block-modes = "0.7.0"
aes = "0.6.0"
base64 = "0.13.0"

# parsing
csv = "1.1.5"
scraper = "0.12"